# pypersistent

./: .gitignore  2026-01-01-in-this-directory-you-find-an-implementation-of-a.txt  CHANGELOG.md  CMakeLists.txt  FINAL_STATUS.md  LICENSE  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PLATFORMS.md  PR_SUMMARY.md  PUBLISHING.md  PYRSISTENT_COMPARISON_TABLE.md  README.md  README_CPP.md  baseline_main_results.txt  compare_pyrsistent.py  compare_pyrsistent_proper.py  fast_iteration_results.txt  feature_optimized_results.txt  performance_test.py  performance_vector.py  persistent_map.py  phase1_and_5_comparison.md  phase1_and_5_results.txt  phase1_results.txt  phase2_comparison.md  phase2_fixed_results.txt  phase2_results.txt  phase3_arena_results.txt  phase4_structural_merge_results.txt  pypersistent_demo.ipynb  pyproject.toml  pyrsistent_comparison_current.txt  pyrsistent_comparison_results.txt  pyrsistent_proper_comparison.txt  setup.py  test_crash.py  test_integrity.py  test_persistent_map.py  test_persistent_map_cpp.py  (+2 more)
.github/workflows/: build-wheels.yml  tests.yml
docs/comparisons/: pyrsistent.md
docs/features/: fast-iteration.md
docs/optimizations/: arena-allocator.md  benchmarking-methodology.md  bulk-pre-allocation.md  structural-merge.md
docs/proposals/: dict-vs-arraymap-analysis.md  small-map-optimization.md
docs/testing/: integrity-testing.md
scripts/: compare_pyrsistent.py  persistent_map.py
src/: arena_allocator.hpp  bindings.cpp  persistent_array_map.cpp  persistent_array_map.hpp  persistent_dict.cpp  persistent_dict.hpp  persistent_hash_set.cpp  persistent_hash_set.hpp  persistent_list.cpp  persistent_map.cpp  persistent_map.hpp  persistent_set.cpp  persistent_set.hpp  persistent_sorted_dict.cpp  persistent_tree_map.cpp  persistent_tree_map.hpp  persistent_vector.cpp  persistent_vector.hpp
tests/: test_crash.py  test_fast_iteration.py  test_integrity.py  test_persistent_array_map.py  test_persistent_hash_set.py  test_persistent_map.py  test_persistent_map_cpp.py  test_persistent_tree_map.py  test_persistent_vector.py
