[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypersistent"
version = "1.0.0"
description = "High-performance persistent (immutable) hash map for Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Clemens Marschner", email = "clemens@marschner.com"}
]
keywords = ["persistent", "immutable", "hashmap", "hamt", "functional", "data-structures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
dependencies = [
    "pybind11>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/cmarschner/pypersistent"
Repository = "https://github.com/cmarschner/pypersistent"
Issues = "https://github.com/cmarschner/pypersistent/issues"
